--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
